# funcprog-ws17-18

./: .gitignore  README.md  funcprog-ws17-18r.cabal
.stack-work/install/x86_64-linux/lts-9.17/8.0.2/doc/funcprog-ws17-18r-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-9.17/8.0.2/flag-cache/: QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  blaze-builder-0.4.0.2-LxClHUTiKUUAxWtvJ5Oeoy  funcprog-ws17-18r-0.1.0.0-EbHhfSs1oJTIKgnYUQNi6x  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  primes-0.2.1.0-BN5qcmPxb1H2keY7Pz9jFX  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  random-1.1-9tceXaeYIMZ4JrKq20Egog  svg-builder-0.1.0.2-KweztDz0lg38JuWRSdI52Z  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL  unordered-containers-0.2.8.0-Bp9XgxjuHxcI4tFehVMDGC
.stack-work/install/x86_64-linux/lts-9.17/8.0.2/lib/x86_64-linux-ghc-8.0.2/funcprog-ws17-18r-0.1.0.0-EbHhfSs1oJTIKgnYUQNi6x/: DragonCurve.dyn_hi  DragonCurve.hi  Fib.hi  Lib.hi  MediaAlbum.dyn_hi  MediaAlbum.hi  MediaLib.hi  MediaTrack.hi  MyList.dyn_hi  MyList.hi  Picture.hi  SmallFac.dyn_hi  StackCalc.dyn_hi
.stack-work/install/x86_64-linux/lts-9.17/8.0.2/pkgdb/: funcprog-ws17-18r-0.1.0.0-EbHhfSs1oJTIKgnYUQNi6x.conf  package.cache
app/: Main.hs
app/ex03/: Run.hs  RunEx03.hs
app/ex04/: RunEx04.hs
app/ex04/MyCalc/: Main.hs
ex01/: ex01.cabal
ex01/app/: Main.hs
ex01/src/: MyList.hs  StackCalc.hs  StackCalcProps.hs  WarmUp.hs  WarmUpProps.hs
ex01/test/: Spec.hs
ex02/: README.md  ex02.cabal
ex02/src/: Fib.hs  FibTest.hs  Media.hs  MediaAlbum.hs  MediaLib.hs  MediaTest.hs  MediaTrack.hs  SmallFac.hs  TicTacToe.hs  TicTacToeTest.hs  Tracks.hs  Undup.hs  UndupTest.hs
ex02/test/: FibTest.hs  Spec.hs  UndupTest.hs
ex03/: README.md  ex03.cabal
ex03/app/: Main.hs
ex03/src/: DragonCurve.hs  Lib.hs  Picture.hs  Vec2.hs
ex03/test/: Spec.hs  TestVec2.hs
ex04/: README.md  ex04.cabal
ex04/src/: Fold.hs
src/ex01/: MyList.hs  StackCalc.hs  WarmUp.hs
src/ex02/: Fib.hs  MediaAlbum.hs  MediaLib.hs  MediaTrack.hs  SmallFac.hs  TicTacToe.hs  Tracks.hs  Undup.hs
src/ex03/: DragonCurve.hs  Picture.hs  PictureSvg.hs  Vec2.hs
src/ex04/: Fold.hs  NumbersGame.hs  PictureExt.hs  StackCalcCLI.hs
src/ex05/: MWLexer.hs  MWParser.hs  MiniWhile.hs  Parsing.hs
src/ex06/: MWInterpreter.hs  Memoization.hs  RandGen.hs
src/ex07/: MWInterpreter2.hs  Protected.hs  StructuredLogging.hs  TestProg.txt
src/ex08/: SafeList.hs  SafeStackCalc.hs
src/preparation/: ApplicativeParser.hs  DataStructs.hs  Generic.hs  ScriptLexer.hs  ScriptParser.hs
test/: Spec.hs
test/ex01/: TestEx01.hs  TestStackCalc.hs  TestWarmUp.hs
test/ex02/: TestEx02.hs  TestFib.hs  TestTicTacToe.hs  TestUndup.hs
test/ex03/: TestEx03.hs  TestVec2.hs
test/ex04/: TestEx04.hs  TestFold.hs
